Update and rename config.json to addon-lms_airplay/config.json

--- a/addon-lms_airplay/config.json
+++ b/addon-lms_airplay/config.json
@@ -2,11 +2,10 @@
   "name": "LMS AirPlay Bridge",
   "version": "1.0.0",
   "slug": "lms_airplay",
-  "description": "Expose AirPlay speakers like HomePods to Logitech Media Server.",
+  "description": "Expose HomePods to LMS via AirPlay Bridge.",
   "startup": "services",
   "boot": "auto",
-  "webui": "http://[HOST]:49152",
-  "arch": ["amd64", "armv7", "aarch64"],
+  "arch": ["amd64", "aarch64", "armv7"],
   "host_network": true,
   "init": false,
   "options": {},
