--- a/couchdb/config.yaml
+++ b/couchdb/config.yaml
@@ -1,5 +1,5 @@
 name: CouchDB
-version: "1.0.0"
+version: "1.0.1"
 slug: couchdb
 description: Apache CouchDB running inside Home Assistant
 arch:
@@ -12,5 +12,9 @@ ports:
   5984/tcp: 5984
 host_network: false
 map: []
-options: {}
-schema: {}
+options:
+  username: admin
+  password: changeme
+schema:
+  username: str
+  password: str
