--- a/couchdb/config.yaml
+++ b/couchdb/config.yaml
@@ -1,7 +1,7 @@
 name: CouchDB
-version: "1.0.1"
+version: "1.0.3"
 slug: couchdb
-description: Apache CouchDB running inside Home Assistant
+description: Apache CouchDB inside Home Assistant
 arch:
   - amd64
   - aarch64
@@ -11,7 +11,6 @@ boot: auto
 ports:
   5984/tcp: 5984
 host_network: false
-map: []
 options:
   username: admin
   password: changeme
