--- a/couchdb/Dockerfile
+++ b/couchdb/Dockerfile
@@ -1,10 +1,11 @@
 FROM couchdb:latest
 
-# Add tini to act as PID 1 (fixes zombie warning)
+# Add tini for proper subreaper
 RUN apt update && apt install -y tini
 
-COPY run.sh /run.sh
-RUN chmod +x /run.sh
+# Copy and set up the entrypoint script
+COPY run.sh /usr/local/bin/run.sh
+RUN chmod +x /usr/local/bin/run.sh
 
 ENTRYPOINT ["/usr/bin/tini", "--"]
-CMD ["/run.sh"]
+CMD ["/usr/local/bin/run.sh"]
