--- a/couchdb/config.yaml
+++ b/couchdb/config.yaml
@@ -1,7 +1,7 @@
 name: CouchDB
 version: "1.0.0"
 slug: couchdb
-description: Apache CouchDB for Home Assistant
+description: Apache CouchDB in Home Assistant
 arch:
   - amd64
   - aarch64
@@ -10,12 +10,10 @@ startup: services
 boot: auto
 ports:
   5984/tcp: 5984
+image: null
 options:
   username: admin
   password: changeme
 schema:
   username: str
   password: str
-environment:
-  COUCHDB_USER: "{username}"
-  COUCHDB_PASSWORD: "{password}"
