--- a/couchdb/config.yaml
+++ b/couchdb/config.yaml
@@ -1,7 +1,7 @@
 name: CouchDB
 version: "1.0.0"
 slug: couchdb
-description: Apache CouchDB in Home Assistant
+description: CouchDB for Home Assistant
 arch:
   - amd64
   - aarch64
@@ -10,10 +10,12 @@ startup: services
 boot: auto
 ports:
   5984/tcp: 5984
-image: null
 options:
   username: admin
   password: changeme
 schema:
   username: str
   password: str
+environment:
+  COUCHDB_USER: "!secret couchdb_username"
+  COUCHDB_PASSWORD: "!secret couchdb_password"
