--- a/couchdb/Dockerfile
+++ b/couchdb/Dockerfile
@@ -1,8 +1,10 @@
-FROM couchdb:latest
+ARG BUILD_FROM
+FROM $BUILD_FROM
 
-COPY run.sh /usr/local/bin/run.sh
-RUN chmod +x /usr/local/bin/run.sh
+# Install CouchDB
+RUN apk add --no-cache couchdb
 
-ENV TINI_SUBREAPER=1
-ENTRYPOINT ["/usr/bin/tini", "-s", "--"]
-CMD ["/usr/local/bin/run.sh"]
+COPY run.sh /run.sh
+RUN chmod +x /run.sh
+
+CMD [ "/run.sh" ]
