--- a/couchdb/config.yaml
+++ b/couchdb/config.yaml
@@ -17,5 +17,5 @@ schema:
   username: str
   password: str
 environment:
-  COUCHDB_USER: "!secret couchdb_user"
+  COUCHDB_USER: "!secret couchdb_username"
   COUCHDB_PASSWORD: "!secret couchdb_password"
