--- a/joplin-webview/config.json
+++ b/joplin-webview/config.json
@@ -10,7 +10,7 @@
     "8080/tcp": 8080
   },
   "environment": {
-    "ORIGINS": "'http://localhost:8080'",
+    "ORIGINS": "http://localhost:8080",
     "JOPLIN_LOGIN_REQUIRED": "True"
-  },
+  }
 }
