--- a/joplin-webview/config.json
+++ b/joplin-webview/config.json
@@ -1,16 +1,16 @@
 {
   "name": "Joplin Vieweb",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "slug": "joplin_vieweb",
   "description": "A web viewer/editor for Joplin notes",
   "startup": "services",
   "boot": "auto",
-  "webui": "http://[HOST]:[PORT:8080]/joplin",
+  "webui": "http://[HOST]:[PORT:8080]",
   "ports": {
     "8080/tcp": 8080
   },
   "environment": {
-    "ORIGINS": "http://localhost:8080",
-    "JOPLIN_LOGIN_REQUIRED": "True"
+    "ORIGINS": "*",
+    "JOPLIN_LOGIN_REQUIRED": "False"
   }
 }
