--- a/joplin-webview/config.json
+++ b/joplin-webview/config.json
@@ -5,6 +5,12 @@
   "description": "A web viewer/editor for Joplin notes",
   "startup": "services",
   "boot": "auto",
+  "arch": [
+    "aarch64",
+    "armv7",
+    "amd64",
+    "i386"
+  ],
   "webui": "http://[HOST]:[PORT:8080]",
   "ports": {
     "8080/tcp": 8080
