--- a/joplin-webview/Dockerfile
+++ b/joplin-webview/Dockerfile
@@ -1,1 +1,14 @@
-FROM joplin-vieweb/joplin-vieweb:latest
+FROM python:3.11-slim
+
+WORKDIR /app
+
+RUN apt-get update && apt-get install -y \
+    git \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN git clone https://github.com/joplin-vieweb/joplin-vieweb.git . && \
+    pip install -r requirements.txt
+
+EXPOSE 8080
+
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
