--- a/joplin-webview/Dockerfile
+++ b/joplin-webview/Dockerfile
@@ -3,16 +3,19 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies and clone repo
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     git \
+    build-essential \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN git clone https://github.com/joplin-vieweb/joplin-vieweb.git . && \
-    pip install --no-cache-dir -r requirements.txt
+# Clone the Joplin Vieweb repository
+RUN git clone https://github.com/joplin-vieweb/joplin-vieweb.git . \
+    && pip install --no-cache-dir -r requirements.txt
 
-# Expose web port
+# Expose the application port
 EXPOSE 8080
 
-# Run the app
+# Start the application
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
