--- a/joplin-webview/Dockerfile
+++ b/joplin-webview/Dockerfile
@@ -3,28 +3,22 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies and Rust
 RUN apt-get update && apt-get install -y \
     git \
     build-essential \
     libpq-dev \
-    libjpeg-dev \
-    zlib1g-dev \
-    libfreetype6-dev \
-    liblcms2-dev \
-    libopenjp2-7-dev \
-    libtiff5-dev \
-    tk-dev \
-    tcl-dev \
-    libwebp-dev \
+    curl \
+    && curl https://sh.rustup.rs -sSf | sh -s -- -y \
+    && export PATH="$HOME/.cargo/bin:$PATH" \
     && rm -rf /var/lib/apt/lists/*
 
-# Clone the Joplin Vieweb repository
-RUN git clone https://github.com/joplin-vieweb/joplin-vieweb.git . \
-    && pip install --no-cache-dir -r requirements.txt
+ENV PATH="/root/.cargo/bin:$PATH"
 
-# Expose the application port
+# Clone and install
+RUN git clone https://github.com/joplin-vieweb/joplin-vieweb.git . && \
+    pip install --no-cache-dir -r requirements.txt
+
 EXPOSE 8080
 
-# Start the application
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
