--- a/joplin-webview/Dockerfile
+++ b/joplin-webview/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:3.11-slim
 
+# Set working directory
 WORKDIR /app
 
+# Install system dependencies and Rust (for psycopg build)
 RUN apt-get update && apt-get install -y \
     git \
     build-essential \
@@ -11,16 +13,18 @@ RUN apt-get update && apt-get install -y \
     && curl https://sh.rustup.rs -sSf | sh -s -- -y \
     && rm -rf /var/lib/apt/lists/*
 
+# Ensure Rust binaries are in path
 ENV PATH="/root/.cargo/bin:$PATH"
 
-# Clone to subdir and install
+# Clone Joplin Vieweb and install Python dependencies
 RUN git clone https://github.com/joplin-vieweb/joplin-vieweb.git /joplin && \
-    cd /joplin && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir -r /joplin/backend/requirements.txt
 
-# Change to app dir for CMD
-WORKDIR /joplin
+# Set working directory to backend
+WORKDIR /joplin/backend
 
+# Expose port
 EXPOSE 8080
 
+# Run the Django server
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
