--- a/joplin-webview/Dockerfile
+++ b/joplin-webview/Dockerfile
@@ -1,30 +1,28 @@
+##############################################
+# Joplin-Vieweb – Home-Assistant add-on image
+##############################################
+
 FROM python:3.11-slim
 
-# Set working directory
+#—Base set-up ————————————————————————————————
 WORKDIR /app
 
-# Install system dependencies and Rust (for psycopg2)
 RUN apt-get update && apt-get install -y \
-    git \
-    build-essential \
-    libpq-dev \
-    curl \
-    python3-pip \
-    && curl https://sh.rustup.rs -sSf | sh -s -- -y \
+        git build-essential libpq-dev curl python3-pip \
+    && curl -sSf https://sh.rustup.rs | sh -s -- -y \
     && rm -rf /var/lib/apt/lists/*
 
-# Rust in path
-ENV PATH="/root/.cargo/bin:$PATH"
+ENV PATH="/root/.cargo/bin:${PATH}"
 
-# Clone Joplin Vieweb and install Python deps from backend
-RUN git clone https://github.com/joplin-vieweb/joplin-vieweb.git /joplin && \
-    pip install --no-cache-dir -r /joplin/backend/requirements.txt
+#—Clone the Django backend & install deps ————
+RUN git clone https://github.com/joplin-vieweb/django-joplin-vieweb.git /joplin \
+ && pip install --no-cache-dir -r /joplin/requirements.txt
 
-# Set working directory to backend
-WORKDIR /joplin/backend
+#—Switch to the backend folder (where manage.py is)
+WORKDIR /joplin
 
-# Expose Django port
+#—Expose the dev-server port used by Vieweb
 EXPOSE 8080
 
-# Run Django dev server
+#—Launch Django (good enough for LAN use; swap for Gunicorn if desired)
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
