--- a/joplin-webview/config.json
+++ b/joplin-webview/config.json
@@ -7,6 +7,11 @@
   "startup": "services",
   "boot": "auto",
 
+  "init": false,
+  "command": "/runserver.sh",
+
+  "image": "docker.io/gri38/django-joplin-vieweb:latest",
+
   "webui": "http://[HOST]:[PORT:80]/joplin",
   "ports": { "80/tcp": 8080 },
 
