--- a/joplin-webview/config.json
+++ b/joplin-webview/config.json
@@ -1,8 +1,9 @@
 {
   "name": "Joplin Vieweb",
-  "slug": "joplin_vieweb",
+  "slug": "joplin-webview",          ← matches folder name
   "version": "1.0.0",
   "description": "Web viewer/editor for Joplin notes",
+
   "arch": ["amd64", "aarch64", "armv7"],
   "startup": "services",
   "boot": "auto",
