--- a/joplin-webview/config.json
+++ b/joplin-webview/config.json
@@ -1,15 +1,11 @@
 {
   "name": "Joplin Vieweb",
-  "slug": "joplin-webview",
+  "slug": "joplin_vieweb",
   "version": "1.0.0",
   "description": "Web viewer/editor for Joplin notes",
-
   "arch": ["amd64", "aarch64", "armv7"],
   "startup": "services",
   "boot": "auto",
-
-  "init": false,
-  "entrypoint": "/runserver.sh",
 
   "webui": "http://[HOST]:[PORT:80]/joplin",
   "ports": { "80/tcp": 8080 },
