--- a/joplin-webview/config.json
+++ b/joplin-webview/config.json
@@ -1,13 +1,15 @@
 {
   "name": "Joplin Vieweb",
-  "slug": "joplin_vieweb",
+  "slug": "joplin-webview",
   "version": "1.0.0",
   "description": "Web viewer/editor for Joplin notes",
+  "arch": ["amd64", "aarch64", "armv7"],
   "startup": "services",
   "boot": "auto",
-  "arch": ["amd64","aarch64","armv7"],
+
   "webui": "http://[HOST]:[PORT:80]/joplin",
   "ports": { "80/tcp": 8080 },
+
   "options": {
     "JOPLIN_URL": "http://joplin:41184",
     "JOPLIN_TOKEN": "",
