--- a/joplin-webview/config.json
+++ b/joplin-webview/config.json
@@ -7,6 +7,9 @@
   "startup": "services",
   "boot": "auto",
 
+  "init": false,          // ← keep image’s own entry-point
+  // (no "entrypoint" key – the image already has one)
+
   "webui": "http://[HOST]:[PORT:80]/joplin",
   "ports": { "80/tcp": 8080 },
 
