--- a/joplin-webview/config.json
+++ b/joplin-webview/config.json
@@ -7,8 +7,7 @@
   "startup": "services",
   "boot": "auto",
 
-  "init": false,          // ← keep image’s own entry-point
-  // (no "entrypoint" key – the image already has one)
+  "init": false, 
 
   "webui": "http://[HOST]:[PORT:80]/joplin",
   "ports": { "80/tcp": 8080 },
