--- a/joplin-webview/config.json
+++ b/joplin-webview/config.json
@@ -7,21 +7,22 @@
   "boot": "auto",
   "arch": ["amd64","aarch64","armv7"],
   "webui": "http://[HOST]:[PORT:80]/joplin",
-  "ports": { "80/tcp": 8080 },
+  "ports": {
+    "80/tcp": 8080
+  },
   "options": {
-    "JOPLIN_URL":   "http://joplin:41184",
+    "JOPLIN_URL": "http://joplin:41184",
     "JOPLIN_TOKEN": "",
-    "ORIGINS":      "*"
+    "ORIGINS": "*"
   },
   "schema": {
-    "JOPLIN_URL":   "str",
+    "JOPLIN_URL": "str",
     "JOPLIN_TOKEN": "str",
-    "ORIGINS":     "str"
+    "ORIGINS": "str"
   },
   "environment": {
-    "JOPLIN_URL":               "!!env_var JOPLIN_URL",
-    "JOPLIN_TOKEN":             "!!env_var JOPLIN_TOKEN",
-    "DJANGO_SETTINGS_MODULE":   "settings.settings",
-    "ORIGINS":                  "!!env_var ORIGINS"
+    "JOPLIN_URL":    "!!env_var JOPLIN_URL",
+    "JOPLIN_TOKEN":  "!!env_var JOPLIN_TOKEN",
+    "ORIGINS":       "!!env_var ORIGINS"
   }
 }
