--- a/trilium/build.yaml
+++ b/trilium/build.yaml
@@ -1,6 +1,6 @@
 # build.yaml
 build_from:
-  amd64: docker.io/triliumnext/notes:v0.92.3-latest
-  aarch64: docker.io/triliumnext/notes:v0.92.3-latest
+  amd64: docker.io/triliumnext/notes:latest
+  aarch64: docker.io/triliumnext/notes:latest
 args:
   BUILD_ARCH: "${BUILD_ARCH}"
